--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@qyu/atom-state-core",
     "type": "module",
-    "version": "1.0.0",
+    "version": "1.0.1",
+    "main": "./build/bundle/entry/index.js",
     "description": "Atomic Storage definition and implementation",
     "homepage": "https://github.com/qlwt/atom-state-core#readme",
     "keywords": ["storage", "global", "state", "atomic"],
