--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "devDependencies": {
         "@rollup/plugin-typescript": "^11.1.6",
+        "@types/node": "^24.7.2",
         "npm-run-all": "^4.1.5",
         "rimraf": "^6.0.1",
         "rollup": "^4.20.0",
